# ScouttWang-py

./: pyproject.toml
src/scouttwang/dataclass_utils/: __init__.py  ops.py  typing.py
src/scouttwang/dataclass_utils/parser/: __init__.py
src/scouttwang/flatdict/: __init__.py
src/scouttwang/iterators/: __init__.py
src/scouttwang/ngargparse/: parser.py
src/scouttwang/path_utils/: __init__.py
src/scouttwang/serde/: __init__.py  serde_json.py
